first version of the ohmyfood website

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- link style -->
-    <link rel="stylesheet" href="./../style/style.css">
+    <link rel="stylesheet" href="./style/style.css">
     <!-- link cdn -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <!-- favicon -->
-    <link rel="shortcut icon" href="./../assets/images/logo/ohmyfood.png" type="image/png">
+    <link rel="shortcut icon" href="./assets/images/logo/ohmyfood.png" type="image/png">
     <title>ohmyfood</title>
 </head>
 
@@ -64,10 +64,10 @@
 
             <div class="container__restaurants">
 
-                <a href="./menu/la-palette-du-gout.html" class="restaurant restaurant--new">
+                <a href="./src/menu/la-palette-du-gout.html" class="restaurant restaurant--new">
 
                     <img class="restaurant__image "
-                        src="./../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                        src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                         alt="image of a restaurant">
 
                     <div class="restaurant__description">
@@ -85,9 +85,9 @@
                 </a>
 
 
-                <a href="./menu/la-note-enchantee.html" class="restaurant restaurant--new">
+                <a href="./src/menu/la-note-enchantee.html" class="restaurant restaurant--new">
 
-                    <img class="restaurant__image" src="./../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                    <img class="restaurant__image" src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                         alt="image of a restaurant">
 
                     <div class="restaurant__description">
@@ -102,10 +102,10 @@
 
                 </a>
 
-                <a href="./menu/a-la-francaise.html" class="restaurant">
+                <a href="./src/menu/a-la-francaise.html" class="restaurant">
 
                     <img class="restaurant__image"
-                        src="./../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                        src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                         alt="image of a restaurant">
 
                     <div class="restaurant__description">
@@ -122,10 +122,10 @@
 
                 </a>
 
-                <a href="./menu/le-delice-des-sens.html" class="restaurant">
+                <a href="./src/menu/le-delice-des-sens.html" class="restaurant">
 
                     <img class="restaurant__image"
-                        src="./../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                        src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                         alt="image of a restaurant">
 
                     <div class="restaurant__description">
