--- a/src/menu/la-palette-du-gout.html
+++ b/src/menu/la-palette-du-gout.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <a href="./../index.html" class="btn__back"><i class="bi bi-arrow-left-short"></i></a>
+        <a href="./../../index.html" class="btn__back"><i class="bi bi-arrow-left-short"></i></a>
         <h2 class="logo">ohmyfood</h2>
     </header>
 
