Modified transitions on the like button

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <p class="step"><i class="step__number-icon">2</i> <i class="fa-solid fa-list step__icon"></i>Composez
                     votre
                     menu</p>
-                <p class="step step--final"><i class="step__number-icon">3</i> <i
+                <p class="step "><i class="step__number-icon">3</i> <i
                         class="step__icon step__icon--final fa-solid fa-store"></i>Deguster au
                     restaurant</p>
             </div>
